--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Hlw player</title>
@@ -69,7 +69,7 @@
             <div class="hero__inner text-center">
               <h1 class="hero__title hero__title--lg" style="font-family:'微软雅黑'">Hlw player</h1>
               <p class="hero__subtitle hero--boxed hero--center" style="font-family:'微软雅黑'">A versatile media player based on the aplayer player kernel.</p>
-              <a href="#" class="btn btn--lg btn--transparent" style="font-family:'微软雅黑'"><span>Download</span></a>
+              <a href="https://github.com/hlwdy/Hlw-player-Download/archive/master.zip" class="btn btn--lg btn--transparent" style="font-family:'微软雅黑'"><span>Download</span></a>
             </div>            
           </div>          
         </div>        
