--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <html><head><title>page 404</title></head>
 <body>
-<script language='javascript'>document.location = '404/404.html'</script>
+<script language='javascript'>document.location = 'https://hlwdy.github.io/404/404.html'</script>
 </body>
 </html>
