--- a/404.html
+++ b/404.html
@@ -1,4 +1,14 @@
-<html><head><title>page 404</title></head>
+<html><head><title>page 404</title>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?5fb187d006c7bca6738bce12f32958bc";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+</head>
 <body>
 <script language='javascript'>document.location = 'https://hlwdy.github.io/404/404.html'</script>
 </body>
