--- a/personal homepage/hlw.html
+++ b/personal homepage/hlw.html
@@ -69,6 +69,19 @@
 	color: #869791;
 }
 </style>
+
+
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?5fb187d006c7bca6738bce12f32958bc";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+
 </head>
 <body>
 <div class="fh5co-loader" style="display: none;"></div>
