--- a/404/404.html
+++ b/404/404.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="404.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
     <script src="404.js"></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?5fb187d006c7bca6738bce12f32958bc";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </head>
 
 <body style="background-image: url(img/c3748.jpg);background-repeat:no-repeat;background-position:center; background-color: #E1E1E1;" id="t" class="offline">
