--- a/personal homepage/hlw.html
+++ b/personal homepage/hlw.html
@@ -7,8 +7,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="944095635">
 <link href="./hlw_files/Main.css" rel="stylesheet">
-<script charset="utf-8" src="./hlw_files/t.js"></script><script charset="utf-8" src="./hlw_files/s.js"></script><script src="./hlw_files/hm.js"></script><script>
-            </script>
 <style>
 .auto-style2 {
 	color: rgb(255, 255, 255);
@@ -40,6 +38,7 @@
 }
 .auto-style5 {
 	color: rgb(0, 0, 0);
+	margin: 0px; padding: 0px; font-family: 微软雅黑; font-size: xx-large; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;
 }
 .auto-style7 {
 	color: white;
@@ -70,18 +69,6 @@
 }
 </style>
 
-
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?5fb187d006c7bca6738bce12f32958bc";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-
-
 </head>
 <body>
 <div class="fh5co-loader" style="display: none;"></div>
@@ -100,12 +87,10 @@ var _hmt = _hmt || [];
           <div class="display-tc animate-box fadeIn animated-fast" data-animate-effect="fadeIn" style="margin-top: 60px">
             <h1 class="auto-style2" style="font-variant-ligatures: normal; font-variant-caps: normal; orphans: 2; widows: 2; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; float: none;"> Hlwdy</h1>
             <div class="Section1" style="margin: 0px; padding: 0px; font-family: 微软雅黑; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; page: Section1; color: rgb(0, 0, 0);">
-              <p style="margin: 0px; padding: 0px;">&nbsp;</p>
               <p style="margin: 0px; padding: 0px;"> <strong style="margin: 0px; padding: 0px;"> </strong></p>
             </div>
             <p style="margin: 0px; padding: 0px; font-family: 微软雅黑; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; color: rgb(0, 0, 0);"> <span class="auto-style4" lang="EN-US" style="margin: 0px; padding: 0px; font-family: 微软雅黑; color: rgb(255, 255, 255); font-size: 18pt;" visible="false"> Welcome to<span style="margin: 0px; padding: 0px;">&nbsp;</span><u style="margin: 0px; padding: 0px;">H</u></span><u style="margin: 0px; padding: 0px;"><span class="auto-style4" style="margin: 0px; padding: 0px; font-family: 微软雅黑; color: rgb(255, 255, 255); font-size: 18pt;" visible="false">l</span><span class="auto-style4" style="margin: 0px; padding: 0px; font-family: 微软雅黑; color: rgb(255, 255, 255); font-size: 18pt;" visible="false">wdy</span></u><span class="auto-style4" lang="EN-US" style="margin: 0px; padding: 0px; font-family: 微软雅黑; color: rgb(255, 255, 255); font-size: 18pt;" visible="false">'s webpage</span><span class="auto-style4" style="margin: 0px; padding: 0px; font-family: 微软雅黑; color: rgb(255, 255, 255); font-size: 18pt;" visible="false">!</span></p>
-            <h2>&nbsp;</h2>
-            &nbsp;</a> </div>
+</a></div>
         </div>
       </div>
     </div>
@@ -130,12 +115,10 @@ var _hmt = _hmt || [];
           <div class="mt">
             <div>
               <p class="auto-style11" style="margin: 0px; padding: 0px; font-family: 微软雅黑; font-size: xx-large; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;"> My qq number is </p>
-				<img src="hlw_files/a.png" width="57" height="57" alt=""/>
-              <p class="auto-style5" style="margin: 0px; padding: 0px; font-family: 微软雅黑; font-size: xx-large; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;"> 2691948959</p>
-              <p class="auto-style5" style="margin: 0px; padding: 0px; font-family: 微软雅黑; font-size: xx-large; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">&nbsp; </p>
-              <p class="auto-style5" style="margin: 0px; padding: 0px; font-family: 微软雅黑; font-size: xx-large; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;"> <a href="mailto:2691948959@qq.com">email:2691948959@qq.com</a></p>
-              <p class="auto-style5" style="margin: 0px; padding: 0px; font-family: 微软雅黑; font-size: xx-large; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">&nbsp; </p>
-              <p class="auto-style5" style="margin: 0px; padding: 0px; font-family: 微软雅黑; font-size: xx-large; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;"> <a href="https://hlwdy.gitlab.io">Go to my blog</a></p>
+              <p class="auto-style5"> <img src="hlw_files/a.png" width="57" height="57" alt=""/>2691948959</p>
+              <p class="auto-style5">&nbsp; </p>
+              <p class="auto-style5"> <a href="mailto:2691948959@qq.com">email:2691948959@qq.com</a></p>
+              <p class="auto-style5"> <a href="https://hlwdyblog.tk">Click to go to my blog</a></p>
             </div>
           </div>
         </div>
@@ -173,34 +156,26 @@ var _hmt = _hmt || [];
     <div class="row row-pb-md">
       <div class="col-md-3 fh5co-widget" style="left: 0px; top: 0px; width: 943px">
         <h4>&nbsp;</h4>
-        <p class="auto-style9" style="font-variant-ligatures: normal; font-variant-caps: normal; orphans: 2; widows: 2; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; float: none;"><span style="color: rgb(62, 62, 62); font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;"><br>
-          <br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+        <p class="auto-style9" style="font-variant-ligatures: normal; font-variant-caps: normal; orphans: 2; widows: 2; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; float: none;"><span style="color: rgb(62, 62, 62); font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
           The east wind boasted the mountain, the spring is long, 
           the flowers are broken, the songs are smashed, the songs 
           are drunk, the dreams are quiet, the evening is loaded 
           with disability, whoever is full of green, lingering 
-          with the scenery, and the dusk alone.<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+          with the scenery, and the dusk alone.
           The beauty of the years lies in its inevitable passing. 
           Spring flowers, autumn months, summer, winter snow.</span></p>
       </div>
     </div>
     <div class="row copyright">
-      <div class="col-md-12 text-center">
+      <div class="col-md text-center">
         <p> Hlwdy's personal homepage </p>
-        <p> </p>
-        <p></p>
+	<p>Copyright© hlwdy</p>
       </div>
     </div>
   </div>
 </footer>
 </div>
-
-<!-- jQuery --> 
 <script src="./hlw_files/jquery.min.js"></script>
-
-<!-- Main --> 
 <script src="./hlw_files/main.js"></script>
 </body>
 </html>
