--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>目录</title>
+        <title>Hlwdy</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
