--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <li><a href="#1"> <em>Homepage</em></a></li>
             <li><a href="#2"> <em>Hlw player</em></a></li>
 	    <li><a href="#3"> <em>Online Markdown</em></a></li>
+	    <li><a href="#4"> <em>Online IDE</em></a></li>
             </ul>
         </nav>
         
@@ -83,6 +84,19 @@
                             <h2>Online Markdown</h2>
                             <p>A online Markdown editor.</p> 
                           <div class="fb-btn" style="font-size: x-large"><a href="markdown/index.html">Click to access</a></div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+	<div class="slide" id="4">
+            <div class="content second-content">
+                <div class="container-fluid">
+                    <div class="col-md-6">
+                        <div class="left-content">
+                            <h2>Online IDE</h2>
+                            <p>An online IDE. Referenced Judge0API.</p> 
+                          <div class="fb-btn" style="font-size: x-large"><a href="ide/index.html">Click to access</a></div>
                       </div>
                     </div>
                 </div>
