--- a/start/index.html
+++ b/start/index.html
@@ -169,11 +169,10 @@
 
             if (getCookie('ofs')) {
                 ofs = JSON.parse(getCookie('ofs'));
-                document.getElementsByName('of1')[0].getElementsByTagName('span')[0].innerText = ofs['of1'];
-                document.getElementsByName('of2')[0].getElementsByTagName('span')[0].innerText = ofs['of2'];
-                document.getElementsByName('of3')[0].getElementsByTagName('span')[0].innerText = ofs['of3'];
-                document.getElementsByName('of4')[0].getElementsByTagName('span')[0].innerText = ofs['of4'];
-                document.getElementsByName('of5')[0].getElementsByTagName('span')[0].innerText = ofs['of5'];
+                for (i = 0; i < 5; i++) {
+                    if (ofs['of' + i.toString()] != '')
+                        document.getElementsByName('of' + i.toString())[0].getElementsByTagName('span')[0].innerText = ofs['of' + i.toString()];
+                }
             }
 
             $('#search-input').keyup(function(event) {
