--- a/start/index.html
+++ b/start/index.html
@@ -170,8 +170,10 @@
             if (getCookie('ofs')) {
                 ofs = JSON.parse(getCookie('ofs'));
                 for (i = 1; i <= 5; i++) {
-                    if (ofs['of' + i.toString()] != '')
+                    if (ofs['of' + i.toString()] != '') {
                         document.getElementsByName('of' + i.toString())[0].getElementsByTagName('span')[0].innerText = ofs['of' + i.toString()];
+                        document.getElementsByName('of' + i.toString())[0].getElementsByTagName('span')[0].style.fontSize = '10px';
+                    }
                 }
             }
 
