--- a/start/index.html
+++ b/start/index.html
@@ -231,6 +231,9 @@
                         text = 'http://' + text;
                 ofs[id] = text;
                 setCookie('ofs', JSON.stringify(ofs));
+                document.getElementsByName(id)[0].getElementsByTagName('span')[0].innerText = text;
+                document.getElementsByName(id)[0].getElementsByTagName('span')[0].style.fontSize = '12px';
+                document.getElementsByName(id)[0].getElementsByTagName('div')[0].style.display = 'block';
             }
         }
 
