--- a/start/index.html
+++ b/start/index.html
@@ -252,19 +252,19 @@
         <div id="schoose-one" name="bing" onclick="changes('bing')">Bing</div>
     </div>
     <div id="oftens">
-        <div id="oftens-one" name="of1" onclick="addofftens('of1')"><span style="font-size: 85px;">+</span>
+        <div id="oftens-one" name="of1" onclick="if(document.getElementsByName('of1')[0].getElementsByTagName('span')[0].innerText == '+'){addofftens('of1')}else{window.open(document.getElementsByName('of1')[0].getElementsByTagName('span')[0].innerText, '_blank');}"><span style="font-size: 85px;">+</span>
             <div onclick="removeofftens('of1')">x</div>
         </div>
-        <div id="oftens-one" name="of2" onclick="addofftens('of2')"><span style="font-size: 85px;">+</span>
+        <div id="oftens-one" name="of2" onclick="if(document.getElementsByName('of2')[0].getElementsByTagName('span')[0].innerText == '+'){addofftens('of2')}else{window.open(document.getElementsByName('of2')[0].getElementsByTagName('span')[0].innerText, '_blank');}"><span style="font-size: 85px;">+</span>
             <div onclick="removeofftens('of2')">x</div>
         </div>
-        <div id="oftens-one" name="of3" onclick="addofftens('of3')"><span style="font-size: 85px;">+</span>
+        <div id="oftens-one" name="of3" onclick="if(document.getElementsByName('of3')[0].getElementsByTagName('span')[0].innerText == '+'){addofftens('of3')}else{window.open(document.getElementsByName('of3')[0].getElementsByTagName('span')[0].innerText, '_blank');}"><span style="font-size: 85px;">+</span>
             <div onclick="removeofftens('of3')">x</div>
         </div>
-        <div id="oftens-one" name="of4" onclick="addofftens('of4')"><span style="font-size: 85px;">+</span>
+        <div id="oftens-one" name="of4" onclick="if(document.getElementsByName('of4')[0].getElementsByTagName('span')[0].innerText == '+'){addofftens('of4')}else{window.open(document.getElementsByName('of4')[0].getElementsByTagName('span')[0].innerText, '_blank');}"><span style="font-size: 85px;">+</span>
             <div onclick="removeofftens('of4')">x</div>
         </div>
-        <div id="oftens-one" name="of5" onclick="addofftens('of5')"><span style="font-size: 85px;">+</span>
+        <div id="oftens-one" name="of5" onclick="if(document.getElementsByName('of5')[0].getElementsByTagName('span')[0].innerText == '+'){addofftens('of5')}else{window.open(document.getElementsByName('of5')[0].getElementsByTagName('span')[0].innerText, '_blank');}"><span style="font-size: 85px;">+</span>
             <div onclick="removeofftens('of5')">x</div>
         </div>
     </div>
