--- a/start/index.html
+++ b/start/index.html
@@ -126,8 +126,16 @@
             -moz-transition: all 0.5s ease 0s;
             -webkit-transition: all 0.5s ease 0s;
         }
+        
+        body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+        }
     </style>
     <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="prompt/js/zepto.js"></script>
+    <script src="prompt/dist/prompt.js"></script>
 </head>
 
 <body>
@@ -221,20 +229,26 @@
         } 
 
         function addofftens(id) {
-            var text = prompt("请输入网址", "");
-            if (text) {
-                if (!checkURL(text))
-                    if (!checkURL('http://' + text)) {
-                        alert('链接不符合格式!');
-                        return;
-                    } else
-                        text = 'http://' + text;
-                ofs[id] = text;
-                setCookie('ofs', JSON.stringify(ofs));
-                document.getElementsByName(id)[0].getElementsByTagName('span')[0].innerText = text;
-                document.getElementsByName(id)[0].getElementsByTagName('span')[0].style.fontSize = '12px';
-                document.getElementsByName(id)[0].getElementsByTagName('div')[0].style.display = 'block';
-            }
+            prompt({
+                title: '设置链接',
+                placeholder: '请输入网址',
+                callback: function(text) {
+                    if (text) {
+                        if (!checkURL(text))
+                            if (!checkURL('http://' + text)) {
+                                alert('链接不符合格式!');
+                                return;
+                            } else
+                                text = 'http://' + text;
+                        ofs[id] = text;
+                        setCookie('ofs', JSON.stringify(ofs));
+                        document.getElementsByName(id)[0].getElementsByTagName('span')[0].innerText = text;
+                        document.getElementsByName(id)[0].getElementsByTagName('span')[0].style.fontSize = '12px';
+                        document.getElementsByName(id)[0].getElementsByTagName('div')[0].style.display = 'block';
+                    }
+                }
+            });
+
         }
 
         function removeofftens(id) {
