--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <div class="col-md-9">
                       <h2 style="width: 581px">hlwdy's personal homepage</h2>
                       <p>personal homepage</p>
-                      <div class="fb-btn"><a href="personal homepage/hlw.html">Click to access</a></div>
+                      <div class="fb-btn"><a href="personal homepage/hlwdy.html">Click to access</a></div>
                   </div>
               </div>
             </div>
