--- a/markdown/index.html
+++ b/markdown/index.html
@@ -24,7 +24,7 @@
 						<li><a href="#" id="file-new"><i class="fa fa-file fa-fw"></i>新建<span class="dropdown-shortcut">Ctrl+N</span></a></li>
 						<li><a href="#" id="file-open"><i class="fa fa-upload fa-fw"></i>打开...<span class="dropdown-shortcut">Ctrl+O</span></a></li>
 						<li><a href="#" id="file-save"><i class="fa fa-save fa-fw"></i>保存...<span class="dropdown-shortcut">Ctrl+S</span></a></li>
-						<!--li><a href="#" id="file-export-html"><i class="fa fa-fw"></i>Export HTML...</a></li-->
+						<li><a href="#" id="file-export-html"><i class="fa fa-fw"></i>导出为HTML...</a></li>
 						<li><a href="#" id="file-rename"><i class="fa fa-fw"></i>重命名...<span class="dropdown-shortcut"></span></a></li>
 					</ul>
 				</li>
