--- a/404/404.html
+++ b/404/404.html
@@ -10,9 +10,21 @@
     <script src="404.js"></script>
 
 </head>
-
 <body style="background-image: url(img/c3748.jpg);background-repeat:no-repeat;background-position:center; background-color: #E1E1E1;" id="t" class="offline">
-    <div id="messageBox" class="sendmessage">
+    <style>
+::-moz-selection {
+  color: #fff;
+  background-color: #39bad6; }
+
+::-webkit-selection {
+  color: #fff;
+  background-color: #39bad6; }
+
+::selection {
+  color: #fff;
+  background-color: #39bad6; }
+  </style>
+	<div id="messageBox" class="sendmessage">
          <div class="niokbutton" onclick="okbuttonsend()"></div>
     </div>
     <div id="main-frame-error" class="interstitial-wrapper">
