--- a/personal homepage/hlwdy.html
+++ b/personal homepage/hlwdy.html
@@ -2,7 +2,6 @@
 <html class=" js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>hlwdy的个人主页</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./hlwdy_files/Main.css" rel="stylesheet">
@@ -132,8 +131,9 @@
               <p class="s4"> <img src="hlwdy_files/a.png" width="42" height="42" alt=""/>2691948959</p>
 	      <p class="s1"> Email</p>
               <p class="s4"> <a href="mailto:hlwdyck@qq.com">hlwdyck@qq.com</a></p>
+		<p class="s4"> <a href="mailto:hlwdyck@gamil.com">hlwdyck@gamil.com</a></p>
 		<p class="s1"> Blog</p>
-              <p class="s4"> <a href="https://hlwdyblog.tk">Go to my blog</a></p>
+              <p class="s4"> <img src="hlwdy_files/blog.png" width="36" height="36" alt=""/><a href="https://hlwdyblog.tk">Hlwdy's blog</a></p>
             </div>
           </div>
         </div>
